--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,57 @@
-myenv
-migrations
+# Archivos de base de datos
 db.sqlite3
+*.sqlite3
+*.db
+
+# Archivos de configuración del entorno
+.env
+*.env
+
+# Archivos de compilación y archivos temporales de Python
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+*.pyo
+*.pyd
+
+# Archivos de caché
+*.cache
+*.tmp
+
+# Archivos generados por IDEs y editores de texto
+.vscode/
+.idea/
+*.suo
+*.ntvs_analysis.dat
+*.ncb
+*.swp
+*.swo
+
+# Archivos de logs
+*.log
+
+# Archivos de migraciones generados
+*.pot
+
+# Archivos estáticos generados
+staticfiles/
+static/
+media/
+
+# Archivos de caché de Django
+*.sqlite3-journal
+
+# Configuración específica de entornos de producción
+/local_settings.py
+
+# Entornos virtuales
+venv/
+myenv/
+env/
+ENV/
+.venv/
+
+# Seguridad
+*.key
+*.pem
